<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:text="@string/percent"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:labelFor="@id/editTextNumber5"
            android:id="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber5"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber5"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber5"
            app:layout_constraintEnd_toEndOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.541"
    />
    <EditText
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:autofillHints="%"
            android:ems="10"
            android:id="@+id/editTextNumber5"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            tools:ignore="DuplicateSpeakableTextCheck"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="20dp"
            android:layout_marginStart="4dp"/>
    <EditText
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:ems="10"
            android:autofillHints="%"
            android:id="@+id/editTextNumber2"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            android:layout_marginEnd="4dp" app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="28dp"/>
    <TextView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:text="@string/percent"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:labelFor="@id/editTextNumber2"
            android:id="@+id/textView10"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber2"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber2" app:layout_constraintVertical_bias="0.55"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber2"
            app:layout_constraintEnd_toEndOf="@+id/textView5" app:layout_constraintHorizontal_bias="0.095"/>
    <EditText
            android:autofillHints="L"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:ems="10"
            android:id="@+id/editTextNumber"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginTop="28dp"
            android:layout_marginStart="4dp"/>
    <TextView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:text="@string/liters"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:labelFor="@id/editTextNumber"
            android:id="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber" app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.541" app:layout_constraintVertical_bias="0.55"/>
    <TextView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:text="@string/percent"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:labelFor="@id/editTextNumber4"
            android:id="@+id/textView11"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber4"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber4"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber4"
            app:layout_constraintEnd_toEndOf="@+id/textView7" app:layout_constraintHorizontal_bias="0.333"
    />
    <EditText
            android:autofillHints="%"
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:ems="10"
            android:id="@+id/editTextNumber4"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="28dp"
            android:layout_marginEnd="4dp" app:layout_constraintStart_toEndOf="@+id/editTextNumber3"
            app:layout_constraintHorizontal_bias="0.97"/>
    <EditText
            android:layout_width="102dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:ems="10"
            android:autofillHints="L"
            android:id="@+id/editTextNumber3"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            tools:ignore="DuplicateSpeakableTextCheck" app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginTop="28dp" android:layout_marginStart="4dp"/>
    <TextView
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:text="@string/liters"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            android:labelFor="@id/editTextNumber3"
            android:id="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber3"
            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber3"
            app:layout_constraintStart_toEndOf="@+id/editTextNumber3"
            app:layout_constraintEnd_toEndOf="@+id/textView6" app:layout_constraintHorizontal_bias="0.541"/>
    <TextView
            android:layout_width="107dp"
            android:layout_height="27dp"
            android:text="@string/ten"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.022"
            app:layout_constraintHorizontal_bias="0.558" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView7" app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:layout_width="107dp"
            android:layout_height="27dp"
            android:text="@string/litres"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.022" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView6" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:layout_width="107dp"
            android:layout_height="27dp"
            android:text="@string/ten"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.025"
            app:layout_constraintHorizontal_bias="0.552" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView13"/>
    <TextView
            android:layout_width="107dp"
            android:layout_height="27dp"
            android:text="@string/litres"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.025" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.052" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" app:layout_constraintTop_toBottomOf="@+id/textView13"/>
    <TextView
            android:layout_width="206dp"
            android:layout_height="24dp"
            android:text="@string/ttStr"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.116" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3" app:layout_constraintTop_toBottomOf="@+id/editTextNumber3"/>
    <TextView
            android:layout_width="348dp"
            android:layout_height="37dp"
            android:text="@string/Titre"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView"/>
    <TextView
            android:layout_width="206dp"
            android:layout_height="24dp"
            android:text="@string/c1"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.173" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.078" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView13"/>
    <TextView
            android:layout_width="206dp"
            android:layout_height="24dp"
            android:text="@string/c2"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.067" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.078" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"/>
    <Button
            android:text="@string/CalcString"
            android:layout_width="160dp"
            android:layout_height="91dp" android:id="@+id/calc"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toTopOf="@+id/editTextNumber5" android:layout_marginStart="100dp"
            app:layout_constraintEnd_toEndOf="@+id/textView11"/>
    <TextView
            android:text=""
            android:textAlignment="center"
            android:layout_width="345dp"
            android:layout_height="38dp" android:id="@+id/info"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            android:layout_marginTop="12dp" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>